istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-encryption-policy
  namespace: default
spec:
  mtls:
    mode: STRICT
