network-policy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-inbound-from-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: azure-vote-back
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: azure-vote-front
      ports:
        - protocol: TCP
          port: 6379
