network-policy-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-inbound-from-nginx-outbound-to-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: azure-vote-front
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-reverse-proxy
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: azure-vote-back
      ports:
        - protocol: TCP
          port: 6379
  egress:
  - ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
    to:
      - namespaceSelector: {}
