network-policy-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-outbound-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-reverse-proxy
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: azure-vote-front
      ports:
        - protocol: TCP
          port: 80
